# Kairos

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  package.json  vercel.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  pyproject.toml  service-api.yaml  service-worker.yaml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 38a34434c2d1_add_applicant_fit_scores.py  a1b2c3d4e5f6_add_stage_entered_at.py  b8d4f2a1c3e5_team_job_desc_file_types.py  e67ca1c9c30d_initial.py
backend/app/: config.py  db.py  limiter.py  main.py  security.py
backend/app/models/: __init__.py  _base.py  applicant.py  integration.py  job.py  pipeline.py  template.py  user.py  user_invite.py
backend/app/routers/: analytics.py  applicants.py  export.py  health.py  integrations.py  internal_auth.py  jobs.py  me.py  pipeline.py  public.py  templates.py  users_admin.py
backend/app/schemas/: applicant.py  auth.py  job.py  public.py  template.py  users_admin.py
backend/app/services/: email.py  outreach.py  ranking.py  storage.py  webhook.py
backend/app/utils/: llm.py  slug.py  url.py
backend/app/worker/: __init__.py  main.py  tasks.py
backend/scripts/: revoke_unauthorized_users.py  seed.py
backend/tests/: conftest.py  test_analytics.py  test_applicants.py  test_export.py  test_jobs.py  test_pipeline.py  test_public.py  test_rbac.py  test_regressions.py  test_templates.py  test_webhook.py
docs/: API.md  PRE-SUBMISSION-CHECKLIST.md  architecture.md  demo-script.md  (+2 more)
frontend/: auth.ts  (+7 more)
(+94 files in other folders)
