[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "resend>=2.29.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
]
